# sysinfo

./: README.md  ascii.c  ascii.h  ascii2c  ascii2c.c  center_text.c  center_text.h  main.c  meson.build  picinfo  picinfo.c  picinfo.webm  selfie.c  selfie.h  shuffle-ascii  shuffle-ascii.c  shuffle.c  shuffle.h  sysinfo  sysinfo.c  sysinfo.h
